Ajout de l'historique des commandes. Responsives de plusieurs pages. Correction probème de style nebular

--- a/src/app/pages/auth/email-verification/email-verification.component.html
+++ b/src/app/pages/auth/email-verification/email-verification.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col offset-md-2">
+          <div class="col offset-sm-2 offset-md-2">
             <ng-container *ngIf="email.invalid && email.touched">
               <p class="caption status-danger" *ngIf="email.errors?.required">
                 {{"error.required.field" | translate:{'field':
