--- a/src/app/pages/auth/login-checkout/login-checkout.component.html
+++ b/src/app/pages/auth/login-checkout/login-checkout.component.html
@@ -91,7 +91,7 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col offset-md-2">
+                                                <div class="col offset-sm-2 offset-md-2">
                                                     <ng-container *ngIf="email.invalid && email.touched">
                                                         <p class="caption status-danger" *ngIf="email.errors?.required">
                                                             {{"error.required.field" | translate:{'field': ('user.email'
@@ -121,7 +121,7 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col offset-md-2 offset-sm-2">
+                                                <div class="col offset-sm-2 offset-md-2 offset-sm-2">
                                                     <span class="label-with-link">
                                                         <a class="forgot-password caption-2"
                                                             routerLink="../request-password">{{'button.forgotten-password'
@@ -131,7 +131,7 @@
                                             </div>
 
                                             <div class="row">
-                                                <div class="col offset-md-2">
+                                                <div class="col offset-sm-2 offset-md-2">
                                                     <ng-container *ngIf="password.invalid && password.touched ">
                                                         <p class="caption status-danger"
                                                             *ngIf="password.errors?.required">
