--- a/src/assets/feane.scss
+++ b/src/assets/feane.scss
@@ -1002,7 +1002,7 @@ a:focus {
 }
 
 .footer_section .footer-info p {
-  color: #ffffff;
+  color: #ffffff !important;
   margin: 0;
 }
 
@@ -1068,7 +1068,7 @@ a:focus {
 }
 
 .footer_section .footer-info p {
-  color: #ffffff;
+  color: #ffffff !important;
   margin: 0;
 }
 
