--- a/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
@@ -15,7 +15,7 @@
                     <i class="fa-regular fa-trash-can fa-lg"></i>
                 </button>
             </div>
-            <p class="card-text font-weight-bold"> {{currentCommandeProduct?.product?.price}}</p>
+            <p class="card-text font-weight-bold"> {{currentCommandeProduct?.product?.price | currency}}</p>
             <p class="card-text"><span class="font-weight-bold">{{'comment.title' | translate}} :</span>
                 {{currentCommandeProduct?.comment}}</p>
                 <div  style="position: relative;">
