--- a/src/app/pages/auth/ngx-reset-password/ngx-reset-password.component.html
+++ b/src/app/pages/auth/ngx-reset-password/ngx-reset-password.component.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col offset-md-2">
+                <div class="col offset-sm-2 offset-md-2">
                     <ng-container *ngIf="password.invalid && password.touched ">
                         <p class="caption status-danger" *ngIf="password.errors?.required">
                             {{"error.required.field" | translate:{'field':
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col offset-md-2">
+                <div class="col offset-sm-2 offset-md-2">
                     <ng-container *ngIf="rePass.invalid && rePass.touched">
                         <p class="error-message caption status-danger" *ngIf="rePass.errors?.required">
                             {{"error.required.field" | translate:{'field':
